# pure-lambda-calculus-interpreter

./: LICENSE  PLCI.cabal  README.md
app/: Main.hs
src/: Definer.hs  Evaluation.hs  Helper.hs  Lexer.hs  Main.hs  Parser.hs  Parser.y  Printer.hs  Reducer.hs  Syntax.hs
